--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,15 @@
 # Database
-DATABASE_URL=postgresql://username:password@postgres:5432/aromabay
+DATABASE_URL=postgresql://username:password@host:5432/dbname
+DATABASE_PASSWORD=your_database_password
 
 # Telegram Bot
-TELEGRAM_BOT_TOKEN=your_actual_bot_token_here
-ADMIN_IDS=your_ids
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token
+ADMIN_IDS=your_admin_ids
 
 # RabbitMQ
-RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
+RABBITMQ_URL=amqp://user:pass@host:5672/
+RABBITMQ_USER=your_rabbit_user
+RABBITMQ_PASSWORD=your_rabbit_password
 
 # FastAPI
-SECRET_KEY=your_actual_secret_key_here
+SECRET_KEY=your_super_secret_key
