--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ annotated-doc==0.0.3
 annotated-types==0.7.0
 anyio==4.11.0
 attrs==25.3.0
+bcrypt==5.0.0
 certifi==2025.8.3
 click==8.3.0
 dnspython==2.8.0
@@ -21,17 +22,23 @@ greenlet==3.2.4
 h11==0.16.0
 httptools==0.6.4
 idna==3.10
+iniconfig==2.3.0
 magic-filter==1.0.12
 Mako==1.3.10
 MarkupSafe==3.0.3
 multidict==6.6.4
+packaging==25.0
 pamqp==3.3.0
+passlib==1.7.4
 pika==1.3.2
+pluggy==1.6.0
 propcache==0.3.2
 psycopg2-binary==2.9.9
 pydantic==2.5.0
 pydantic-settings==2.1.0
 pydantic_core==2.14.1
+pytest==7.4.0
+pytest-asyncio==0.21.0
 python-dotenv==1.1.1
 python-multipart==0.0.6
 PyYAML==6.0.3
@@ -45,5 +52,3 @@ uvloop==0.21.0
 watchfiles==1.1.0
 websockets==15.0.1
 yarl==1.20.1
-pytest==7.4.0
-pytest-asyncio==0.21.0
