--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,14 +63,13 @@ services:
   frontend:
     build: ./frontend
     environment:
-      VITE_API_URL: http://localhost:8000
+      VITE_API_URL: ${VITE_API_URL}
       HOST: 0.0.0.0
       PORT: 3000
-    ports:
-      - "3000:3000"
     depends_on:    
       - backend
-
+      
+     
 # Место для хранения данных (чтобы не терялись при перезапуске)
 volumes:
   postgres_data:
