--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,8 @@ services:
       VITE_API_URL: ${VITE_API_URL}
       HOST: 0.0.0.0
       PORT: 3000
+    ports:
+      - "3000:3000" 
     depends_on:    
       - backend
       
