--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,6 @@ services:
   # Наша коробка с backend (собираем по Dockerfile)  
   backend:  
     build: ./backend    # Собрать коробку из папки backend  
-    ports:  
-      - "8000:8000"    # Открыть порт 8000 наружу  
     env_file:  
     - .env  
     depends_on:        # Сначала запустить эти коробки  
@@ -66,9 +64,20 @@ services:
       VITE_API_URL: ${VITE_API_URL}
       HOST: 0.0.0.0
       PORT: 3000
-    ports:
-      - "3000:3000" 
     depends_on:    
+      - backend
+      
+      
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+    depends_on:
+      - frontend
       - backend
       
      
