--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
   # Наша коробка с backend (собираем по Dockerfile)  
   backend:  
     build: ./backend    # Собрать коробку из папки backend  
+    ports:
+      - "8000:8000"    # Открыть порт 8000 наружу для отладки
     env_file:  
     - .env  
     depends_on:        # Сначала запустить эти коробки  
@@ -60,6 +62,8 @@ services:
     
   frontend:
     build: ./frontend
+    ports:
+      - "3000:3000"    # Открыть порт 3000 наружу для отладки
     environment:
       VITE_API_URL: ${VITE_API_URL}
       HOST: 0.0.0.0
