--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,65 @@
+# HTTP конфигурация для домена (работает и без SSL)
 server {
     listen 80;
     server_name aromabay.site www.aromabay.site;
-    return 301 https://$server_name$request_uri;
+    
+    # Раскомментируйте следующую строку после получения SSL сертификата:
+    # return 301 https://$server_name$request_uri;
+    
+    # Бекенд API
+    location /api/ {
+        proxy_pass http://backend:8000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Фронтенд
+    location / {
+        proxy_pass http://frontend:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Для Vite dev server
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
 }
 
+# Конфигурация для работы по IP-адресу (без SSL)
+server {
+    listen 80 default_server;
+    server_name 213.171.12.94 _;
+
+    # Бекенд API
+    location /api/ {
+        proxy_pass http://backend:8000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Фронтенд
+    location / {
+        proxy_pass http://frontend:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Для Vite dev server
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+}
+
+# HTTPS конфигурация для домена (раскомментируйте после получения SSL сертификата)
 server {
     listen 443 ssl http2;
     server_name aromabay.site www.aromabay.site;
