--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,12 +73,15 @@ services:
       
       
   nginx:
-    image: nginx:alpine
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      # Монтируем SSL сертификаты, если они есть (на сервере)
+      # На локальной машине эта директория может не существовать - это нормально
       - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
       - frontend
