--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,20 @@
+# Эта конфигурация будет автоматически заменена entrypoint.sh
+# в зависимости от наличия SSL сертификатов
+# 
+# Для локальной разработки (без SSL):
+# - Работает по http://localhost
+# - Работает по http://127.0.0.1
+#
+# На сервере (с SSL):
+# - Работает по http://213.171.12.94 (IP, без SSL)
+# - Работает по http://aromabay.site (домен, редирект на HTTPS)
+# - Работает по https://aromabay.site (домен, с SSL)
+
 # HTTP конфигурация для домена (работает и без SSL)
 server {
     listen 80;
     server_name aromabay.site www.aromabay.site;
-    
-    # Раскомментируйте следующую строку после получения SSL сертификата:
-    # return 301 https://$server_name$request_uri;
-    
-    # Бекенд API
+
     location /api/ {
         proxy_pass http://backend:8000/;
         proxy_set_header Host $host;
@@ -15,15 +23,12 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Фронтенд
     location / {
         proxy_pass http://frontend:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Для Vite dev server
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -33,9 +38,8 @@ server {
 # Конфигурация для работы по IP-адресу (без SSL)
 server {
     listen 80 default_server;
-    server_name 213.171.12.94 _;
+    server_name _;
 
-    # Бекенд API
     location /api/ {
         proxy_pass http://backend:8000/;
         proxy_set_header Host $host;
@@ -44,50 +48,12 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Фронтенд
     location / {
         proxy_pass http://frontend:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Для Vite dev server
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-    }
-}
-
-# HTTPS конфигурация для домена (раскомментируйте после получения SSL сертификата)
-server {
-    listen 443 ssl http2;
-    server_name aromabay.site www.aromabay.site;
-
-    # SSL сертификаты
-    ssl_certificate /etc/letsencrypt/live/aromabay.site/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/aromabay.site/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-    # Бекенд API
-    location /api/ {
-        proxy_pass http://backend:8000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Фронтенд
-    location / {
-        proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Для Vite dev server
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
