--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,61 +1,22 @@
-# Эта конфигурация будет автоматически заменена entrypoint.sh
-# в зависимости от наличия SSL сертификатов
-# 
-# Для локальной разработки (без SSL):
-# - Работает по http://localhost
-# - Работает по http://127.0.0.1
-#
-# На сервере (с SSL):
-# - Работает по http://213.171.12.94 (IP, без SSL)
-# - Работает по http://aromabay.site (домен, редирект на HTTPS)
-# - Работает по https://aromabay.site (домен, с SSL)
-
-# HTTP конфигурация для домена (работает и без SSL)
 server {
-    listen 80;
-    server_name aromabay.site www.aromabay.site;
+    listen 3000;
+    listen [::]:3000;
 
-    location /api/ {
-        proxy_pass http://backend:8000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    # Можно указать сервер по IP, но это не обязательно
+    # server_name 213.171.12.94;
 
     location / {
-        proxy_pass http://frontend:3000;
+        proxy_pass https://aromabay.site;
+
+        # Пробрасываем заголовки клиента
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-    }
-}
 
-# Конфигурация для работы по IP-адресу (без SSL)
-server {
-    listen 80 default_server;
-    server_name _;
-
-    location /api/ {
-        proxy_pass http://backend:8000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    location / {
-        proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        # Таймауты (по желанию)
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
     }
 }
