--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,12 +1,6 @@
 FROM nginx:alpine
 
-# Копируем entrypoint скрипт
-COPY entrypoint.sh /entrypoint.sh
-RUN chmod +x /entrypoint.sh
-
-# Копируем базовую конфигурацию (будет заменена entrypoint.sh при наличии SSL)
+# Копируем конфигурацию nginx
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Используем наш entrypoint
-ENTRYPOINT ["/entrypoint.sh"]
-
+# Используем стандартный entrypoint/command из базового образа nginx
