upd ci.yml and auto-creating env

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,13 @@ RABBITMQ_PASSWORD=your_rabbit_password
 
 # FastAPI
 SECRET_KEY=your_super_secret_key
+
+#для локальной
+VITE_API_URL=http://localhost:3000
+
+# раскомментируйте, если приобрели домен
+#VITE_API_URL=http://ваш_домен/api
+          
+CORS_ORIGINS2=http://localhost:3000
+CORS_ORIGINS3=https://ваш_домен/
+CORS_ORIGINS4=http://ip_облачного_сервера:3000
