edit backend endpoint

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ SECRET_KEY=your_super_secret_key
 VITE_API_URL=http://localhost:3000
 
 # раскомментируйте, если приобрели домен
-#VITE_API_URL=http://ваш_домен/api
+#VITE_API_URL=http://ваш_домен
           
 CORS_ORIGINS2=http://localhost:3000
 CORS_ORIGINS3=https://ваш_домен/
