--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -185,7 +185,7 @@ jobs:
           # FastAPI
           SECRET_KEY=${{ secrets.STAGING_SECRET_KEY }}
           
-          VITE_API_URL=https://aromabay.site/api/
+          VITE_API_URL=https://aromabay.site/
           
           CORS_ORIGINS2=http://localhost:3000
           CORS_ORIGINS3=https://aromabay.site/
