edit env.example and readme + add upload img

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
+#Создайте такой .env в этой же директории, чтобы запускать локально без докера из командной строки
 # Database
 DATABASE_URL=postgresql://username:password@postgres:5432/aromabay
 
@@ -6,3 +7,5 @@ RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
 
 # FastAPI
 SECRET_KEY=your_actual_secret_key_here
+
+CORS_ORIGINS=http://localhost:3000
