--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,2 @@
+#Создайте такой .env в этой же директории, чтобы запускать локально без докера из командной строки
 VITE_API_URL=http://localhost:8000
