--- a/tg_bot/requirements.txt
+++ b/tg_bot/requirements.txt
@@ -1,6 +1,37 @@
-aiogram==3.2.0
-asyncpg==0.29.0
 aio-pika==9.4.1
-python-dotenv==1.0.0
+aiofiles==23.2.1
+aiogram==3.2.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.9.5
+aiormq==6.8.1
+aiosignal==1.4.0
+annotated-types==0.7.0
+anyio==4.11.0
+asyncpg==0.29.0
+attrs==25.4.0
+certifi==2025.10.5
+fast-depends==3.0.3
+faststream==0.6.2
+frozenlist==1.8.0
+greenlet==3.2.4
+idna==3.11
+iniconfig==2.3.0
+magic-filter==1.0.12
+multidict==6.7.0
+packaging==25.0
+pamqp==3.3.0
+pika==1.3.2
+pluggy==1.6.0
+propcache==0.4.1
+psycopg2-binary==2.9.11
+pydantic==2.5.3
+pydantic_core==2.14.6
 pytest==7.4.0
 pytest-asyncio==0.21.0
+python-dotenv==1.0.0
+python3-pika==0.9.14
+sniffio==1.3.1
+SQLAlchemy==2.0.44
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+yarl==1.22.0
